--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
-    "@ngrx/store": "^5.2.0",
+    "@ngrx/effects": "^9.2.1",
+    "@ngrx/store": "^9.2.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.5.4",
